<android.support.constraint.ConstraintLayout
    android:id="@+id/movie_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    tools:context="com.dlgdev.popularmovies.ui.details.MovieDetailsActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="224dp"
        android:layout_height="26dp"
        tools:text="Movie title II: The departure"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="@+id/poster"
        app:layout_constraintLeft_toRightOf="@+id/poster"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"/>

    <TextView
        android:id="@+id/release_date"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:gravity="start"
        tools:text="1/1/1970"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/title"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <TextView
        android:id="@+id/vote_average"
        android:layout_width="120dp"
        android:layout_height="18dp"
        android:gravity="start"
        tools:text="0.1 out of 5.0"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/release_date"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/release_date"/>

    <TextView
        android:id="@+id/plot_synopsis"
        android:layout_width="220dp"
        android:layout_height="232dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/poster"
        tools:text="fqepneöflkdfasdkjfqwjerklfasfdqfasdgasdgasd
        asdgasdfasfqwegfvwevgase
        aserfqwegaseraserasr"/>

    <ImageView
        android:id="@+id/poster"
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:contentDescription="@string/movie_poster"
        tools:src="@android:drawable/alert_dark_frame"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/trailers_label"
        android:layout_width="120dp"
        android:layout_height="18dp"
        android:labelFor="@+id/trailers"
        android:text="@string/trailers"
        android:layout_marginTop="8dp"
        style="@style/DetailsLabel"
        app:layout_constraintTop_toBottomOf="@+id/synopsis_label"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/synopsis_label"
        android:layout_marginStart="0dp"/>

    <TextView
        android:id="@+id/synopsis_label"
        android:layout_width="120dp"
        android:layout_height="18dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/plot_synopsis"
        style="@style/DetailsLabel"
        android:text="@string/synopsis"
        app:layout_constraintLeft_toLeftOf="@+id/poster"
        app:layout_constraintTop_toBottomOf="@+id/poster"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/trailers"
        android:layout_width="220dp"
        android:layout_height="233dp"
        android:layout_marginLeft="-8dp"
        android:layout_marginStart="-8dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/poster"/>

    <TextView
        android:id="@+id/user_reviews_label"
        android:layout_width="120dp"
        android:layout_height="18dp"
        android:labelFor="@+id/user_reviews"
        android:text="@string/reviews"
        android:layout_marginTop="8dp"
        style="@style/DetailsLabel"
        app:layout_constraintTop_toBottomOf="@+id/trailers_label"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/trailers_label"
        android:layout_marginStart="0dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/user_reviews"
        android:layout_width="220dp"
        android:layout_height="233dp"
        android:layout_marginLeft="-8dp"
        android:layout_marginStart="-8dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/poster"/>
</android.support.constraint.ConstraintLayout>