<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Strings related to Settings -->

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Movie types</string>

    <string name="pref_title_movies_type">Movies type</string>
    <string-array name="pref_movies_type_titles">
        <item>@string/favorites</item>
        <item>@string/popular</item>
        <item>@string/top_rated</item>
    </string-array>
    <string-array name="pref_sync_type_values">
        <item>favorites</item>
        <item>popular</item>
        <item>top_rated</item>
    </string-array>

    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="favorites">Favorites</string>

    <!-- Example General settings
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>-->

    <!-- Example settings for Notifications
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>-->
</resources>