<?xml version="1.0" encoding="utf-8"?>
<fragment
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_movie_posters"
    android:name="com.dlgdev.popularmovies.ui.movies.MoviePostersFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movies.MoviePostersActivity"
    tools:layout="@layout/fragment_movie_posters"/>