<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_settings">Settings</string>
    <string name="movie_details_activity_title">Movie Details</string>
    <string name="movie_title">Movie title</string>
    <string name="movie_poster">Movie poster</string>
    <string name="vote_average">Vote average: %s</string>
    <string name="release_date">Release date: %s</string>

    <string name="refresh">Refresh</string>
    <string name="sync_account_type">example.com</string>
    <string name="content_authority">com.dlgdev.popularmovies.movies</string>
    <string name="favorite">Favorite</string>
    <string name="trailer_preview">Trailer preview</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="synopsis">Synopsis</string>
    <string name="share">Share trailer</string>
</resources>
